force-app/main/default/objects/Contact/fields/Calendar_Access_Requests__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Access_Requests__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of calendar access requests sent to physician to share calendar with clinic&apos;s service account</description>
    <label>Calendar Access Requests?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>