force-app/main/default/objects/Contact/fields/OnDuty__c.field-meta.xml
<CustomField>
    <fullName>OnDuty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Duty?</label>
    <type>Checkbox</type>
</CustomField>