force-app/main/default/objects/Contact/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialization</label>
    <referenceTo>Specialization__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>