force-app/main/default/objects/Contact/recordTypes/Physician.recordType-meta.xml
<RecordType>
    <fullName>Physician</fullName>
    <active>true</active>
    <label>Physician</label>
</RecordType>