force-app/main/default/objects/Contact/listViews/Physicians.listView-meta.xml
<ListView>
    <fullName>Physicians</fullName>
    <columns>FULL_NAME</columns>
    <columns>Specialization__c</columns>
    <columns>OnDuty__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Physician</value>
    </filters>
    <label>Physicians</label>
</ListView>